# SimplePythonNixProject

./: .gitignore  README.md  flake.nix  pyproject.toml  setup.py
.github/workflows/: ci.yaml  ci_cd.yaml
basic_python_app/: __main__.py
src/: setup.py
src/basic_python_app/: __init__.py  __main__.py
tests/: __init__.py  test_main.py
